Cleans up the rest of the files that need to be changed

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -60,17 +60,17 @@ jobs:
         pip install . -r requirements-dev.txt
 
     - name: Python Black
-      run: black --check python_gh_template
+      run: black --check src
 
     - name: Pylint
-      run: pylint python_gh_template
+      run: pylint src
 
     - name: Flake8
-      run: flake8 --statistics --show-source --count python_gh_template
+      run: flake8 --statistics --show-source --count src
 
     - name: Bandit
-      run: bandit -r python_gh_template
+      run: bandit -r src
 
     - name: Tests
-      run: py.test --cov python_gh_template tests/ -vv
+      run: py.test --cov src tests/ -vv
 
