--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -59,18 +59,11 @@ jobs:
         pip install --upgrade pip wheel -r requirements-dev.txt
         pip install .
 
-    - name: Python Black
-      run: black --check verkada_py
+    - name: Lint
+      run: make lint
 
-    - name: Pylint
-      run: pylint verkada_py
+    - name: Test
+      run: make test
 
-    - name: Flake8
-      run: flake8 --statistics --show-source --count verkada_py
-
-    - name: Bandit
-      run: bandit -r verkada_py
-
-    - name: Tests
-      run: py.test --cov verkada_py tests/ -vv
-
+    - name: Test Docs
+      run: make docs
