--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,4 +23,5 @@ jobs:
       run: |
         python setup.py sdist bdist_wheel
         twine upload dist/*
+        twine upload dist/* --repository-url https://push.fury.io/cyb3r-jak3 -u ${{ secrets.GemFury }} -p ""
 
