--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        python setup.py sdist bdist_wheel
+        make build
         twine upload dist/*
         twine upload dist/* --repository-url https://push.fury.io/cyb3r-jak3 -u ${{ secrets.GemFury }} -p ""
 
