--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -58,7 +58,10 @@ jobs:
         pip install .
 
     - name: Lint
-      run: make lint
+      run: |
+        Get-Command black
+        pip show -f black
+        make lint
 
     - name: Test
       run: make test
