Seperate out installs

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -54,13 +54,14 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        pip install --upgrade pip wheel -r requirements-dev.txt
+        pip install --upgrade pip wheel
+        pip install --upgrade -r requirements-dev.txt
         pip install .
 
     - name: Lint
       run: |
-        Get-Command black
         pip show -f black
+        Get-Command black
         make lint
 
     - name: Test
