--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -59,10 +59,7 @@ jobs:
         pip install .
 
     - name: Lint
-      run: |
-        pip show -f black
-        Get-Command black
-        make lint
+      run: make lint
 
     - name: Test
       run: make test
