--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -54,7 +54,8 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        pip install --upgrade pip wheel -r requirements-dev.txt
+        pip install --upgrade pip wheel
+        pip install --upgrade -r requirements-dev.txt
         pip install .
 
     - name: Lint
