--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,18 +15,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-16.04, ubuntu-18.04, ubuntu-20.04, macos-10.15, windows-2016, windows-2019]
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        os: [ubuntu-18.04, ubuntu-20.04, macos-10.15, windows-2019, windows-2022]
+        python-version: [3.6, 3.7, 3.8, 3.9, '3.10']
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
 
     - name: Linux Cache
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       if: startsWith(runner.os, 'Linux')
       with:
         path: ~/.cache/pip
@@ -35,7 +35,7 @@ jobs:
           ${{ runner.os }}-pip-
 
     - name: MacOS Cache
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       if: startsWith(runner.os, 'macOS')
       with:
         path: ~/Library/Caches/pip
@@ -44,7 +44,7 @@ jobs:
           ${{ runner.os }}-pip-
 
     - name: Windows Cache
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       if: startsWith(runner.os, 'Windows')
       with:
         path: ~\AppData\Local\pip\Cache
@@ -66,3 +66,7 @@ jobs:
 
     - name: Test Docs
       run: make docs
+
+    - name: Check Build
+      if: github.event.pull_request.base.ref == 'master'
+      run: make check-dist
