--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,11 +1,11 @@
 -r requirements.txt
-bandit >= 1.7.0
-black >= 21.4b2
-coverage >= 5.5
-flake8 >= 3.9.2
-pylint >= 2.8.2
-pytest >= 6.2.4
-pytest-cov >= 2.11.1
+bandit >= 1.7.4
+black >= 22.10.0
+coverage >= 6.5.0
+flake8 >= 6.0.0
+pylint >= 2.15.7
+pytest >= 7.2.0
+pytest-cov >= 4.0.0
 requests-mock[fixture] == 1.10.0
-sphinx >= 3.5.4
+sphinx >= 5.3.0
 sphinx_rtd_theme
